tests/baselines/Issue63.baseline.txt
original file
-----------------------------------
^^type ^^Callback <^^T> = ^^(error: Error, value: T) => any

^^type Callback^^<T > = ^^(error: Error, value: T) ^^=> ^^any

type Callback = ^^(error: Error, value: T) => ^^any

^^type ^^Callback^^<string ^^| ^^(a: number, b: string) => ^^void> = ^^(error: Error, value: T) => ^^any

^^ type ^^Foo <^^T > = ^^{

	^^foo: ^^T,
	^^bar: ^^number

^^}
-----------------------------------

>type Callback <T> = (error: Error, value: T) => any
 ^^^^
 source.ts meta.type.declaration.ts keyword.other.ts
     ^
     source.ts meta.type.declaration.ts
      ^^^^^^^^
      source.ts meta.type.declaration.ts entity.name.class.ts
              ^
              source.ts meta.type.declaration.ts
               ^
               source.ts meta.type.declaration.ts meta.type.parameters.ts meta.brace.angle.ts
                ^
                source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.name.ts
                 ^
                 source.ts meta.type.declaration.ts meta.type.parameters.ts
                  ^
                  source.ts meta.type.declaration.ts
                   ^^
                   source.ts meta.type.declaration.ts keyword.operator.comparison.ts
                     ^
                     source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                      ^^^^^
                      source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                           ^^
                           source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                             ^^^^^
                             source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                  ^^
                                  source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                    ^^^^^
                                    source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                         ^^
                                         source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                           ^
                                           source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                            ^
                                            source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                             ^
                                             source.ts meta.type.declaration.ts
                                              ^^
                                              source.ts meta.type.declaration.ts meta.type.function.return.ts keyword.operator.ts
                                                ^
                                                source.ts meta.type.declaration.ts meta.type.function.return.ts
                                                 ^^^
                                                 source.ts meta.type.declaration.ts meta.type.function.return.ts meta.type.primitive.ts support.type.ts
>
 ^
 source.ts
>type Callback<T > = (error: Error, value: T) => any
 ^^^^
 source.ts meta.type.declaration.ts keyword.other.ts
     ^
     source.ts meta.type.declaration.ts
      ^^^^^^^^
      source.ts meta.type.declaration.ts entity.name.class.ts
              ^
              source.ts meta.type.declaration.ts meta.type.parameters.ts meta.brace.angle.ts
               ^
               source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.name.ts
                ^
                source.ts meta.type.declaration.ts meta.type.parameters.ts
                 ^
                 source.ts meta.type.declaration.ts meta.type.parameters.ts
                  ^
                  source.ts meta.type.declaration.ts
                   ^^
                   source.ts meta.type.declaration.ts keyword.operator.comparison.ts
                     ^
                     source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                      ^^^^^
                      source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                           ^^
                           source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                             ^^^^^
                             source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                  ^^
                                  source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                    ^^^^^
                                    source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                         ^^
                                         source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                           ^
                                           source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                            ^
                                            source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                             ^
                                             source.ts meta.type.declaration.ts
                                              ^^
                                              source.ts meta.type.declaration.ts meta.type.function.return.ts keyword.operator.ts
                                                ^
                                                source.ts meta.type.declaration.ts meta.type.function.return.ts
                                                 ^^^
                                                 source.ts meta.type.declaration.ts meta.type.function.return.ts meta.type.primitive.ts support.type.ts
>
 ^
 source.ts
>type Callback = (error: Error, value: T) => any
 ^^^^
 source.ts meta.type.declaration.ts keyword.other.ts
     ^
     source.ts meta.type.declaration.ts
      ^^^^^^^^
      source.ts meta.type.declaration.ts entity.name.class.ts
              ^
              source.ts meta.type.declaration.ts
               ^^
               source.ts meta.type.declaration.ts keyword.operator.comparison.ts
                 ^
                 source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                  ^^^^^
                  source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                       ^^
                       source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                         ^^^^^
                         source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                              ^^
                              source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                ^^^^^
                                source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                     ^^
                                     source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                       ^
                                       source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                        ^
                                        source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                         ^
                                         source.ts meta.type.declaration.ts
                                          ^^
                                          source.ts meta.type.declaration.ts meta.type.function.return.ts keyword.operator.ts
                                            ^
                                            source.ts meta.type.declaration.ts meta.type.function.return.ts
                                             ^^^
                                             source.ts meta.type.declaration.ts meta.type.function.return.ts meta.type.primitive.ts support.type.ts
>
 ^
 source.ts
>type Callback<string | (a: number, b: string) => void> = (error: Error, value: T) => any
 ^^^^
 source.ts meta.type.declaration.ts keyword.other.ts
     ^
     source.ts meta.type.declaration.ts
      ^^^^^^^^
      source.ts meta.type.declaration.ts entity.name.class.ts
              ^
              source.ts meta.type.declaration.ts meta.type.parameters.ts meta.brace.angle.ts
               ^^^^^^
               source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.primitive.ts support.type.ts
                     ^
                     source.ts meta.type.declaration.ts meta.type.parameters.ts
                      ^
                      source.ts meta.type.declaration.ts meta.type.parameters.ts keyword.operator.type.ts
                       ^^
                       source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts
                         ^
                         source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts meta.type.name.ts
                          ^^
                          source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts
                            ^^^^^^
                            source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts meta.type.primitive.ts support.type.ts
                                  ^^
                                  source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts
                                    ^
                                    source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts meta.type.name.ts
                                     ^^
                                     source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts
                                       ^^^^^^
                                       source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts meta.type.primitive.ts support.type.ts
                                             ^
                                             source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts
                                              ^
                                              source.ts meta.type.declaration.ts meta.type.parameters.ts
                                               ^^
                                               source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.function.return.ts keyword.operator.ts
                                                 ^
                                                 source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.function.return.ts
                                                  ^^^^
                                                  source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.function.return.ts meta.type.primitive.ts support.type.ts
                                                      ^
                                                      source.ts meta.type.declaration.ts meta.type.parameters.ts
                                                       ^
                                                       source.ts meta.type.declaration.ts
                                                        ^^
                                                        source.ts meta.type.declaration.ts keyword.operator.comparison.ts
                                                          ^
                                                          source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                                           ^^^^^
                                                           source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                                                ^^
                                                                source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                                                  ^^^^^
                                                                  source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                                                       ^^
                                                                       source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                                                         ^^^^^
                                                                         source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                                                              ^^
                                                                              source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                                                                ^
                                                                                source.ts meta.type.declaration.ts meta.type.paren.cover.ts meta.type.name.ts
                                                                                 ^
                                                                                 source.ts meta.type.declaration.ts meta.type.paren.cover.ts
                                                                                  ^
                                                                                  source.ts meta.type.declaration.ts
                                                                                   ^^
                                                                                   source.ts meta.type.declaration.ts meta.type.function.return.ts keyword.operator.ts
                                                                                     ^
                                                                                     source.ts meta.type.declaration.ts meta.type.function.return.ts
                                                                                      ^^^
                                                                                      source.ts meta.type.declaration.ts meta.type.function.return.ts meta.type.primitive.ts support.type.ts
>
 ^
 source.ts
> type Foo <T > = {
 ^
 source.ts
  ^^^^
  source.ts meta.type.declaration.ts keyword.other.ts
      ^
      source.ts meta.type.declaration.ts
       ^^^
       source.ts meta.type.declaration.ts entity.name.class.ts
          ^
          source.ts meta.type.declaration.ts
           ^
           source.ts meta.type.declaration.ts meta.type.parameters.ts meta.brace.angle.ts
            ^
            source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.name.ts
             ^
             source.ts meta.type.declaration.ts meta.type.parameters.ts
              ^
              source.ts meta.type.declaration.ts meta.type.parameters.ts
               ^
               source.ts meta.type.declaration.ts
                ^^
                source.ts meta.type.declaration.ts keyword.operator.comparison.ts
                  ^
                  source.ts meta.type.declaration.ts meta.object.type.ts meta.brace.curly.ts
>
 ^
 source.ts meta.type.declaration.ts meta.object.type.ts
>	foo: T,
 ^
 source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts
  ^^^
  source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts variable.ts
     ^^^
     source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts
        ^^
        source.ts meta.type.declaration.ts meta.object.type.ts
>	bar: number
 ^
 source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts
  ^^^
  source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts variable.ts
     ^^
     source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts
       ^^^^^^
       source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts meta.type.primitive.ts support.type.ts
>
 ^
 source.ts meta.type.declaration.ts meta.object.type.ts
>}
 ^
 source.ts meta.type.declaration.ts meta.object.type.ts meta.brace.curly.ts